--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="jonathan.traitementimage.MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/infoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
