--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,7 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/infoView"
             android:layout_width="wrap_content"
             android:textAlignment="center"
             android:layout_height="wrap_content"/>
