--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -44,6 +44,7 @@
 
         <ImageView
             android:id="@+id/image2"
+            android:onClick="clickImage2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
